--- a/src/styles.css
+++ b/src/styles.css
@@ -12,3 +12,19 @@
 .pageHeader {
   margin-bottom: 15px;
 }
+
+.custom-filter-dropdown {
+  padding: 8px;
+  border-radius: 6px;
+  background: #fff;
+  box-shadow: 0 1px 6px rgba(0, 0, 0, .2);
+}
+
+.custom-filter-dropdown input {
+  width: 130px;
+  margin-right: 8px;
+}
+
+.highlight {
+  color: #f50;
+}
